# clipboard-win

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  build.ps1  build.rs  run_test.ps1  run_test.sh
.github/workflows/: rust.yml
src/: bit_map.rs  clipboard_formats.rs  constants.rs  dib.rs  formats.rs  html.rs  image.rs  lib.rs  monitor.rs  raw.rs  sys.rs  utils.rs  wrapper.rs
tests/: clipboard.rs  format.rs  test_clip.rs
