[package]
name = "clipboard-win"
version = "4.4.2"
authors = ["Douman <douman@gmx.se>"]
description = "Provides simple way to interact with Windows clipboard."
license = "BSL-1.0"

keywords = ["Windows", "winapi", "clipboard"]
categories = ["os::windows-apis"]

repository = "https://github.com/DoumanAsh/clipboard-win"
documentation = "https://docs.rs/crate/clipboard-win"

readme = "README.md"
edition = "2018"

include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[target.'cfg(windows)'.dependencies]
error-code = "2.1"
str-buf = "1"
windows = { version = "0.43.0", features = ["Win32_UI_Shell", "Win32_Foundation"] }

# [features]
# std = ["error-code/std"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
default-features = false
features = [
    "basetsd",
    "shellapi",
    "winbase",
    "winuser",
    "winerror",
    "stringapiset",
    "errhandlingapi",
    "synchapi"
]
